--- a/Lets_FindUs/app/src/main/res/layout/activity_person_profile.xml
+++ b/Lets_FindUs/app/src/main/res/layout/activity_person_profile.xml
@@ -127,7 +127,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/obbligatory_data">
 
                 <uk.co.onemandan.materialtextview.MaterialTextView
-                    android:id="@+id/description_tv"
+                    android:id="@+id/name_tv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -136,6 +136,34 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
+                    app:mtv_contentTextColor="@color/black"
+                    app:mtv_labelText="@string/name_tv_label"
+                    app:mtv_labelTextColor="@color/colorPrimaryDark" />
+
+                <uk.co.onemandan.materialtextview.MaterialTextView
+                    android:id="@+id/surname_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/name_tv"
+                    app:mtv_contentTextColor="@color/black"
+                    app:mtv_labelText="@string/surname_tv_label"
+                    app:mtv_labelTextColor="@color/colorPrimaryDark" />
+
+                <uk.co.onemandan.materialtextview.MaterialTextView
+                    android:id="@+id/description_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/surname_tv"
                     app:mtv_contentTextColor="@color/black"
                     app:mtv_labelText="@string/description_tv_label"
                     app:mtv_labelTextColor="@color/colorPrimaryDark" />
