--- a/Lets_FindUs/app/src/main/res/values/colors.xml
+++ b/Lets_FindUs/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="colorSecondaryLight">#ffffb0</color>
 
     <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
     <color name="selectedDot">#212121</color>
     <color name="unselectedDot">#484848</color>
 
