--- a/Lets_FindUs/app/src/main/res/values/styles.xml
+++ b/Lets_FindUs/app/src/main/res/values/styles.xml
@@ -21,4 +21,10 @@
         <item name="titleTextColor">@color/black</item>
     </style>
 
+
+    <style name="SplashTheme" parent="AppTheme">
+        <item name="android:windowBackground">@drawable/splash_screen</item>
+    </style>
+
+
 </resources>
