--- a/Lets_FindUs/app/src/main/res/values/styles.xml
+++ b/Lets_FindUs/app/src/main/res/values/styles.xml
@@ -22,6 +22,7 @@
     </style>
 
 
+    <!-- Splash Screnn app -->
     <style name="SplashTheme" parent="AppTheme">
         <item name="android:windowBackground">@drawable/splash_screen</item>
     </style>
