Fixed some issue with the background color of the circular image view

--- a/Lets_FindUs/app/src/main/res/layout/fragment_profile_picture.xml
+++ b/Lets_FindUs/app/src/main/res/layout/fragment_profile_picture.xml
@@ -35,7 +35,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/white"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/profile_picture_next_fab"
