--- a/Lets_FindUs/app/src/main/res/layout/edit_mode_activity.xml
+++ b/Lets_FindUs/app/src/main/res/layout/edit_mode_activity.xml
@@ -49,7 +49,8 @@
                         app:civ_shadow_radius="2dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:background="@color/white"/>
 
                     <TextView
                         android:id="@+id/nickname_card"
