--- a/Lets_FindUs/app/src/main/res/layout/fragment_profile.xml
+++ b/Lets_FindUs/app/src/main/res/layout/fragment_profile.xml
@@ -49,7 +49,8 @@
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            android:transitionName="@string/image_transition"/>
+                            android:transitionName="@string/image_transition"
+                            android:background="@color/white"/>
 
                         <TextView
                             android:id="@+id/nickname_card"
